add a button in sideview that switches from the search results grid to the shot browsing grid + efficieny
add a button in sideview that switches from the search results grid to the shot browsing grid, loading the video shots vatch wise to allow for fast and efficient retrieval, since the shots open in a new page it allows the user to switch back to his original query using the tabs on the top right
